returns keys and trips, not able to display yet

--- a/app/src/main/res/layout/activity_trip_list.xml
+++ b/app/src/main/res/layout/activity_trip_list.xml
@@ -28,6 +28,15 @@
 
         </android.support.design.widget.AppBarLayout>
 
+        <AutoCompleteTextView
+            android:id="@+id/actv_search_places"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:hint="Search for a place"
+            android:singleLine="true"
+            android:layout_above="@+id/rvTrips"
+            />
+
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rvTrips"
             android:layout_width="match_parent"
@@ -35,6 +44,7 @@
             android:scrollbars="vertical"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
+            android:layout_below="@+id/actv_search_places"
             app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
 
         <android.support.design.widget.FloatingActionButton
