--- a/app/src/main/res/menu/drawer_view.xml
+++ b/app/src/main/res/menu/drawer_view.xml
@@ -2,8 +2,13 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <group android:checkableBehavior="single">
         <item
+            android:id="@+id/navProfile"
+            android:icon="@drawable/ic_profile"
+            android:title="@string/nav_profile" />
+
+        <item
             android:id="@+id/navLogout"
             android:icon="@drawable/ic_logout"
-            android:title="Logout" />
+            android:title="@string/nav_logout" />
     </group>
 </menu>
