--- a/app/src/main/res/layout/activity_trip_list.xml
+++ b/app/src/main/res/layout/activity_trip_list.xml
@@ -24,18 +24,21 @@
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 android:background="?attr/colorPrimary"
-                app:popupTheme="@style/AppTheme.PopupOverlay" />
+                app:popupTheme="@style/AppTheme.PopupOverlay" >
+
+                <AutoCompleteTextView
+                    android:id="@+id/actv_search_places"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:hint="Search for a place"
+                    android:singleLine="true"
+                    />
+
+            </android.support.v7.widget.Toolbar>
 
         </android.support.design.widget.AppBarLayout>
 
-        <AutoCompleteTextView
-            android:id="@+id/actv_search_places"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:hint="Search for a place"
-            android:singleLine="true"
-            android:layout_above="@+id/rvTrips"
-            />
+
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rvTrips"
