--- a/app/src/main/res/layout/activity_create_trip.xml
+++ b/app/src/main/res/layout/activity_create_trip.xml
@@ -7,6 +7,12 @@
     android:fitsSystemWindows="true"
     tools:context=".activities.CreateTripActivity">
 
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -21,7 +27,8 @@
 
     </android.support.design.widget.AppBarLayout>
 
-
     <include layout="@layout/content_create_trip" />
+
+    </LinearLayout>
 
 </android.support.design.widget.CoordinatorLayout>
