Intent to Navigate to first place working :100:

--- a/app/src/main/res/layout/item_place.xml
+++ b/app/src/main/res/layout/item_place.xml
@@ -39,7 +39,7 @@
         android:id="@+id/vpGallery"
         android:layout_below="@id/ivIconNumber"
         android:layout_width="match_parent"
-        android:layout_height="200dp">
+        android:layout_height="wrap_content">
     </android.support.v4.view.ViewPager>
 
 </RelativeLayout>
