--- a/app/src/main/res/layout/item_trip.xml
+++ b/app/src/main/res/layout/item_trip.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
-    card_view:cardElevation="4dp"
+    card_view:cardElevation="6dp"
     android:layout_marginTop="12dp"
     android:layout_marginLeft="12dp"
     android:layout_marginRight="12dp"
@@ -22,7 +22,8 @@
             android:id="@+id/ivTripBanner"
             tools:src="@android:drawable/btn_star_big_on"
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="250dp"
+            android:scaleType="centerCrop"
             android:adjustViewBounds="true" />
 
 
