--- a/app/src/main/res/layout/activity_trip_detail.xml
+++ b/app/src/main/res/layout/activity_trip_detail.xml
@@ -50,10 +50,9 @@
 
     <com.uber.sdk.android.rides.RideRequestButton
         android:id="@+id/btnRequest"
-        android:layout_below="@+id/rlContent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="end|bottom"
-        />
+        android:layout_below="@+id/rlContent"
+        android:layout_gravity="end|bottom" />
 
 </android.support.design.widget.CoordinatorLayout>
