--- a/app/src/main/res/layout/item_trip.xml
+++ b/app/src/main/res/layout/item_trip.xml
@@ -6,13 +6,13 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
-    card_view:cardElevation="6dp"
-    android:layout_marginTop="12dp"
     android:layout_marginLeft="12dp"
     android:layout_marginRight="12dp"
+    android:layout_marginTop="12dp"
+    card_view:cardElevation="6dp"
     card_view:cardUseCompatPadding="true">
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
@@ -20,42 +20,52 @@
 
         <ImageView
             android:id="@+id/ivTripBanner"
-            tools:src="@android:drawable/btn_star_big_on"
             android:layout_width="fill_parent"
             android:layout_height="250dp"
+            android:adjustViewBounds="true"
             android:scaleType="centerCrop"
-            android:adjustViewBounds="true" />
+            tools:src="@android:drawable/btn_star_big_on" />
+
+        <ImageButton
+            android:id="@+id/ivFavorite"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentTop="true"
+            android:background="@android:color/transparent"
+            android:padding="@dimen/activity_horizontal_margin"
+            android:src="@drawable/ic_heart_outline_34" />
 
 
         <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
+            android:layout_below="@+id/ivTripBanner"
             android:orientation="vertical"
-            android:padding="5dp"
-            android:weightSum="1">
+            android:padding="5dp">
 
             <TextView
                 android:id="@+id/tvTripName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="left|center_horizontal"
-                android:text="Ice Cream Tour"
-                android:textSize="20dp" />
-
+                android:layout_gravity="start|center_horizontal"
+                android:textSize="20sp"
+                tools:text="Ice Cream Tour" />
 
             <RelativeLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="left|center_horizontal">
+                android:layout_gravity="start|center_horizontal">
 
                 <TextView
                     android:id="@+id/tvTripDistance"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="left|center_horizontal"
+                    android:layout_gravity="start|center_horizontal"
                     android:paddingRight="0dp"
-                    android:text="3.1 miles" />
+                    tools:text="3.1 miles" />
 
                 <TextView
                     android:id="@+id/tvAway"
@@ -64,26 +74,24 @@
                     android:layout_alignParentTop="true"
                     android:layout_gravity="center_horizontal"
                     android:layout_toEndOf="@+id/tvTripDistance"
-                    android:layout_toRightOf="@+id/tvTripDistance"/>
+                    android:layout_toRightOf="@+id/tvTripDistance" />
 
             </RelativeLayout>
 
             <RelativeLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="left|center_horizontal">
-
+                android:layout_gravity="start|center_horizontal">
 
                 <TextView
                     android:id="@+id/tvTripLength"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
-                    android:text="10" />
-
+                    tools:text="10" />
 
             </RelativeLayout>
         </LinearLayout>
 
-    </LinearLayout>
+    </RelativeLayout>
 </android.support.v7.widget.CardView>
