--- a/app/src/main/res/layout/activity_trip_list.xml
+++ b/app/src/main/res/layout/activity_trip_list.xml
@@ -4,15 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/ndTrips"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/colorTextIcons">
 
     <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:fitsSystemWindows="true"
         android:descendantFocusability="beforeDescendants"
+        android:fitsSystemWindows="true"
         android:focusableInTouchMode="true"
         tools:context=".activities.TripDetailsActivity">
 
@@ -26,39 +27,45 @@
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 android:background="?attr/colorPrimary"
-                app:popupTheme="@style/AppTheme.PopupOverlay" >
+                app:popupTheme="@style/AppTheme.PopupOverlay">
 
-                <AutoCompleteTextView
-                    android:id="@+id/actv_search_places"
-                    android:layout_width="wrap_content"
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="Search for a place"
-                    android:singleLine="true"
-                    />
+                    android:orientation="horizontal">
 
-                <ImageView
-                    android:id="@+id/miFilter"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/ic_filter_list_black_24dp"
-                    android:title="Filter"
-                    />
+                    <AutoCompleteTextView
+                        android:id="@+id/actv_search_places"
+                        android:layout_width="@dimen/zero_dimension"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="5"
+                        android:hint="@string/search_hint"
+                        android:singleLine="true" />
+
+                    <ImageView
+                        android:id="@+id/miFilter"
+                        android:layout_width="@dimen/zero_dimension"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:layout_weight="1"
+                        android:src="@drawable/ic_filter_list_white_24dp"
+                        android:title="@string/search_filter" />
+
+                </LinearLayout>
 
             </android.support.v7.widget.Toolbar>
 
         </android.support.design.widget.AppBarLayout>
 
-
-
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rvTrips"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:scrollbars="vertical"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_below="@+id/actv_search_places"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
+            android:scrollbars="vertical"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/fabCreateTrip"
@@ -66,18 +73,17 @@
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|end"
             android:layout_margin="@dimen/fab_margin"
-            android:onClick="createTweet"
             android:src="@drawable/ic_add" />
 
     </android.support.design.widget.CoordinatorLayout>
 
     <android.support.design.widget.NavigationView
         android:id="@+id/nvView"
-        app:headerLayout="@layout/nav_header"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:background="@android:color/white"
+        app:headerLayout="@layout/nav_header"
         app:menu="@menu/drawer_view" />
 
 </android.support.v4.widget.DrawerLayout>
