--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,10 +1,16 @@
 <resources>
     <!-- Default screen margins, per the Android Design guidelines. -->
+    <dimen name="activity_horizontal_small_margin">8dp</dimen>
+    <dimen name="activity_vertical_small_margin">8dp</dimen>
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
-    <dimen name="image_width">200dp</dimen>
-    <dimen name="image_height">200dp</dimen>
+    <dimen name="image_height">230dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="app_bar_height">210dp</dimen>
     <dimen name="text_margin">16dp</dimen>
+    <dimen name="zero_dimension">0dp</dimen>
+    <dimen name="zero_padding">0dp</dimen>
+    <dimen name="cardview_default_elevation">5dp</dimen>
+    <dimen name="activity_small_padding">12dp</dimen>
+    <dimen name="big_text_size">20sp</dimen>
 </resources>
