--- a/app/src/main/res/layout/item_trip.xml
+++ b/app/src/main/res/layout/item_trip.xml
@@ -23,7 +23,7 @@
             android:layout_width="match_parent"
             android:layout_height="@dimen/image_height"
             android:adjustViewBounds="true"
-            android:scaleType="centerCrop"
+            android:scaleType="fitXY"
             tools:src="@android:drawable/btn_star_big_on" />
 
         <ImageButton
